--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<div class="map">
 			<div class="c1"></div>
-			<iframe width="600px" height="400px" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=4&center=20.5937%2C78.9629&key=AIzaSyDqvC2u9SM-y0iB4nWw336bTg4oQziTRU0" allowfullscreen></iframe>
+			<iframe width="600px" height="400px" src="https://www.google.com/maps/embed/v1/view?zoom=4&center=20.5937%2C78.9629&key=AIzaSyDqvC2u9SM-y0iB4nWw336bTg4oQziTRU0" ></iframe>
 		</div>
 		<div class="calc">
 			<div class="c2"></div>
@@ -74,7 +74,158 @@
 		</div>
 
 
+		<div class="main">
+			<div class="c5"></div>
+			<div class="cover"></div>
+			<div class="controls">
+				<div class="lines">
+					<div class="l"></div>
+					<div class="l"></div>
+					<div class="l"></div>
+				</div>
+				<div class="menu2">
+					<div class="cross3">X</div>
+					<ul>
+						<li id="a">Heavy</li>
+						<li id="b">Lets Hurt Tonight</li>
+						<li id="c">Lost on You</li>
+						<li id="d">No Vacancy</li>
+					</ul>
+				</div>
+				<center>
+					<h1><div class="name">HEAVY</div></h1>
+					<div class="buttons">	
+						<div class="back" onclick="back()"><img src="back.png" height="50px" width="50px"></div>
+						<div class="pause" onclick="play()"><img src="play.png" height="50px" width="50px"></div>
+						<div class="forward"  onclick="next()"><img src="next.png" height="50px" width="50px"></div>
+					</div>
+				</center>
+			</div>
+			<div class="img"></div>
+		</div>
+
 	</div>
+
+
+	<script type="text/javascript">
+
+		var songno = 0;
+		var songs = ['1.mp3','2.mp3','3.mp3','4.mp3']
+		var img = ['url(1.jpg)','url(2.jpg)','url(3.jpg)','url(4.jpg)']
+		var song = new Audio();
+		function a(){
+			$('.img').css('background-image',img[songno]);
+			$('.section2').css('background-image',img[songno]);
+			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+			$(".name").html(name[songno]);
+			console.log(name[10])
+		}
+		$(document).ready(function() {
+			song.src = songs[songno]
+			playsong()
+		})
+		function playsong(){
+			song.play()
+		}
+		function play(){
+			if (song.paused) 
+			{
+				song.play();
+				$('.pause img').attr('src','pause.png')
+				var d = song.currentTime
+				var c = song.duration
+				console.log(d , c)
+			}
+			else 
+			{
+				song.pause();
+				$('.pause img').attr('src','play.png')
+			}
+		}
+		function next(){
+			songno++
+			if (songno>3) {
+				songno = 0
+				song.src = '1.mp3'
+				song.play();
+				a()
+			} else {
+				song.src = songs[songno]
+				song.play();
+				console.log(songno)
+				a()
+				song.play();
+			}
+
+		}
+		function back(){
+			songno--
+			if (songno<0) {
+				songno = 3
+				song.src = '4.mp3'
+				song.play();
+				a()
+			} else {
+				song.src = songs[songno]
+				song.play();
+				console.log(songno)
+				a()
+				song.play();
+			}			
+		}
+		$('.lines').click(function(){
+			$(".menu2").css("left",'0');
+			$(".cover").css("right",'0');
+		})
+		$('.cross3').click(function(){
+			$(".menu2").css("left",'-100%');
+			$(".cover").css("right",'-100%');
+		})
+		$('#a').click(function(){
+			songno = 0;
+			song.src = '1.mp3'
+			playsong()
+			u()
+			$('.img').css('background-image', img[songno])
+			$('.section2').css('background-image', img[songno])
+			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+			$(".name").html(name[songno]);
+		})
+		$('#b').click(function(){
+			songno = 1;
+			song.src = '2.mp3'
+			playsong()
+			u()
+			$('.img').css('background-image', img[songno])
+			$('.section2').css('background-image', img[songno])
+			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+			$(".name").html(name[songno]);
+		})
+		$('#c').click(function(){
+			songno = 2;
+			song.src = '3.mp3'
+			playsong()
+			u()
+			$('.img').css('background-image', img[songno])
+			$('.section2').css('background-image', img[songno])
+			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+			$(".name").html(name[songno]);
+		})
+		$('#d').click(function(){
+			songno = 3;
+			song.src = '4.mp3'
+			playsong()
+			u()
+			$('.img').css('background-image', img[songno])
+			$('.section2').css('background-image', img[songno])
+			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+			$(".name").html(name[songno]);
+		})
+		function u(){
+			$(".menu2").css("left",'-100%');
+			$(".cover").css("right",'-100%');
+		}
+	</script>
 	
 	<script type="text/javascript">
 
@@ -139,9 +290,13 @@ $(document).ready(function(){
 		revert()
 		$('.browser').css('left','0')		
 	})
+	$('.a4').click(function(){
+		revert()
+		$('.main').css('left','0')		
+	})
 	$('.a1').click(function(){
 		revert()
-		$('.calendar').css('right','10%')		
+		$('.calendar').css('left','10%')		
 	})
 	$('.c1').click(function(){
 		$('.map').css('left','-100%')
@@ -153,7 +308,10 @@ $(document).ready(function(){
 		$('.browser').css('left','-100%')
 	})
 	$('.c4').click(function(){
-		$('.calendar').css('right','-100%')
+		$('.calendar').css('left','-100%')
+	})
+	$('.c5').click(function(){
+		$('.main').css('left','-100%')
 	})
 	
 	
@@ -164,7 +322,44 @@ $(document).ready(function(){
 	$('.map').draggable()
 	$('.calc').draggable()
 	$('.browser').draggable()
+	$('.main').draggable()
 	$('.calendar').draggable()
+
+	$('.map').click(function(){
+		$('.calc').css('z-index','300')
+		$('.browser').css('z-index','300')
+		$('.main').css('z-index','300')
+		$('.calendar').css('z-index','300')
+		$('.map').css('z-index','500')
+	})
+	$('.calc').click(function(){
+		$('.map').css('z-index','300')
+		$('.browser').css('z-index','300')
+		$('.main').css('z-index','300')
+		$('.calendar').css('z-index','300')
+		$('.calc').css('z-index','500')
+	})
+	$('.browser').click(function(){
+		$('.calc').css('z-index','300')
+		$('.map').css('z-index','300')
+		$('.main').css('z-index','300')
+		$('.calendar').css('z-index','300')
+		$('.browser').css('z-index','500')
+	})
+	$('.main').click(function(){
+		$('.calc').css('z-index','300')
+		$('.browser').css('z-index','300')
+		$('.map').css('z-index','300')
+		$('.calendar').css('z-index','300')
+		$('.main').css('z-index','500')
+	})
+	$('.calendar').click(function(){
+		$('.calc').css('z-index','300')
+		$('.browser').css('z-index','300')
+		$('.main').css('z-index','300')
+		$('.map').css('z-index','300')
+		$('.calendar').css('z-index','500')
+	})
 })
 
 
