--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
 
 		<div class="menu">
 			<div class="cross"></div>
-			<div class="boxes">
-				<div class="a1 b"></div>
-				<div class="a2 b"></div>
-				<div class="a3 b"></div>
-				<div class="a6 b"></div>
-				<div class="a4 b"></div>
-				<div class="a7 b"></div>
-				<div class="a5 b"></div>
-				<div class="a8 b"></div>
-			</div>
+			<center>
+				<div class="boxes">
+					<div class="a1 b"></div>
+					<div class="a2 b"></div>
+					<div class="a3 b"></div>
+					<div class="a6 b"></div>
+					<div class="a4 b"></div>
+					<div class="a7 b"></div>
+					<div class="a5 b"></div>
+					<div class="a8 b"></div>
+				</div>
+			</center>
 		</div>
 
 		<div class="map">
