--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@ $(document).ready(function(){
 		$('.browser').css('left','0')		
 	})
 	$('.a4').click(function(){
+		playsong()
 		revert()
 		$('.main').css('left','0')		
 	})
