--- a/index.html
+++ b/index.html
@@ -4,232 +4,254 @@
 	<title>simple os</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:100|Rajdhani:300" rel="stylesheet">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.429/styles/kendo.common-material.min.css" />
+	<link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.429/styles/kendo.material.min.css" />
+	<link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.429/styles/kendo.dataviz.min.css" />
+	<link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.429/styles/kendo.dataviz.material.min.css" />
+
+	<script src="http://cdn.kendostatic.com/2015.1.429/js/jquery.min.js"></script>
+	<script src="http://cdn.kendostatic.com/2015.1.429/js/kendo.all.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
 	<div class="all">
+		<div id="txt" class="time">
+			<center><div id="hours"></div></center>
+			<center><div id="mins"></div></center>
+		</div>
 		<div id="date"></div>
-		<div id="txt" class="time"></div>
-		<div class="temp">“Get busy living or get busy dying.” <span>-Stephen King</span>
-		</div>
-		<div class="button"></div>
-
-		<div class="browser">
-			<div class="c3"></div>
-			<div class="t1">No Internet Connection</div>
-		</div>
-
-		<div class="menu">
-			<div class="cross"></div>
-			<center>
-				<div class="boxes">
-					<div class="a1 b"></div>
-					<div class="a2 b"></div>
-					<div class="a3 b"></div>
-					<div class="a6 b"></div>
-					<div class="a4 b"></div>
-					<div class="a7 b"></div>
-					<div class="a5 b"></div>
-					<div class="a8 b"></div>
-				</div>
-			</center>
-		</div>
-
-		<div class="map">
-			<div class="c1"></div>
-			<iframe width="600px" height="400px" src="https://www.google.com/maps/embed/v1/view?zoom=4&center=20.5937%2C78.9629&key=AIzaSyDqvC2u9SM-y0iB4nWw336bTg4oQziTRU0" ></iframe>
-		</div>
-		<div class="calc">
-			<div class="c2"></div>
-			<div id="calculator">
-				<div class="top">
-					<span class="clear">C</span>
-					<div class="screen"></div>
-				</div>
-
-				<div class="keys">
-					<span>7</span>
-					<span>8</span>
-					<span>9</span>
-					<span class="operator">+</span>
-					<span>4</span>
-					<span>5</span>
-					<span>6</span>
-					<span class="operator">-</span>
-					<span>1</span>
-					<span>2</span>
-					<span>3</span>
-					<span class="operator">÷</span>
-					<span>0</span>
-					<span>.</span>
-					<span class="eval">=</span>
-					<span class="operator">x</span>
-				</div>
-			</div>
-		</div>
-
 		<div class="calendar">
 			<div class="c4"></div>
-			<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ssiddhant9811%40gmail.com&amp;color=%231B887A&amp;ctz=Asia%2FCalcutta" style="border-width:0" width="600" height="400" frameborder="0" scrolling="no"></iframe>
-		</div>
-
-
-		<div class="main">
-			<div class="c5"></div>
-			<div class="cover"></div>
-			<div class="controls">
-				<div class="lines">
-					<div class="l"></div>
-					<div class="l"></div>
-					<div class="l"></div>
+			<div id="example">
+				<div class="demo-section k-header" style="width: 300px; text-align: center;">
+					<div id="calendar"></div>
 				</div>
-				<div class="menu2">
-					<div class="cross3">X</div>
-					<ul>
-						<li id="a">Heavy</li>
-						<li id="b">Lets Hurt Tonight</li>
-						<li id="c">Lost on You</li>
-						<li id="d">No Vacancy</li>
-					</ul>
-				</div>
-				<center>
-					<h1><div class="name">HEAVY</div></h1>
-					<div class="buttons">	
-						<div class="back" onclick="back()"><img src="back.png" height="50px" width="50px"></div>
-						<div class="pause" onclick="play()"><img src="play.png" height="50px" width="50px"></div>
-						<div class="forward"  onclick="next()"><img src="next.png" height="50px" width="50px"></div>
-					</div>
-				</center>
-			</div>
-			<div class="img"></div>
-		</div>
-
-	</div>
+				<script>
+					$(document).ready(function() {
+                    // create Calendar from div HTML element
+                    $("#calendar").kendoCalendar();
+                });
+            </script>
+        </div>
+    </div>
+    <div class="bar">
+    	<div class="button"></div>
+    </div>
 
 
-	<script type="text/javascript">
+    <div class="browser">
+    	<div class="c3"></div>
+    	<div class="t1">No Internet Connection</div>
+    </div>
 
-		var songno = 0;
-		var songs = ['1.mp3','2.mp3','3.mp3','4.mp3']
-		var img = ['url(1.jpg)','url(2.jpg)','url(3.jpg)','url(4.jpg)']
-		var song = new Audio();
-		function a(){
-			$('.img').css('background-image',img[songno]);
-			$('.section2').css('background-image',img[songno]);
-			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
-			$(".name").html(name[songno]);
-			console.log(name[10])
-		}
-		$(document).ready(function() {
-			song.src = songs[songno]
-			playsong()
-		})
-		function playsong(){
-			song.play()
-		}
-		function play(){
-			if (song.paused) 
-			{
-				song.play();
-				$('.pause img').attr('src','pause.png')
-				var d = song.currentTime
-				var c = song.duration
-				console.log(d , c)
-			}
-			else 
-			{
-				song.pause();
-				$('.pause img').attr('src','play.png')
-			}
-		}
-		function next(){
-			songno++
-			if (songno>3) {
-				songno = 0
-				song.src = '1.mp3'
-				song.play();
-				a()
-			} else {
-				song.src = songs[songno]
-				song.play();
-				console.log(songno)
-				a()
-				song.play();
-			}
+    <div class="menu">
+    	<div class="cross"></div>
+    	<center>
+    		<div class="boxes">
+    			<div class="a1 b"></div>
+    			<div class="a2 b"></div>
+    			<div class="a3 b"></div>
+    			<div class="a6 b"></div>
+    			<div class="a4 b"></div>
+    			<div class="a7 b"></div>
+    			<div class="a5 b"></div>
+    			<div class="a8 b"></div>
+    		</div>
+    	</center>
+    </div>
 
-		}
-		function back(){
-			songno--
-			if (songno<0) {
-				songno = 3
-				song.src = '4.mp3'
-				song.play();
-				a()
-			} else {
-				song.src = songs[songno]
-				song.play();
-				console.log(songno)
-				a()
-				song.play();
-			}			
-		}
-		$('.lines').click(function(){
-			$(".menu2").css("left",'0');
-			$(".cover").css("right",'0');
-		})
-		$('.cross3').click(function(){
-			$(".menu2").css("left",'-100%');
-			$(".cover").css("right",'-100%');
-		})
-		$('#a').click(function(){
-			songno = 0;
-			song.src = '1.mp3'
-			playsong()
-			u()
-			$('.img').css('background-image', img[songno])
-			$('.section2').css('background-image', img[songno])
-			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
-			$(".name").html(name[songno]);
-		})
-		$('#b').click(function(){
-			songno = 1;
-			song.src = '2.mp3'
-			playsong()
-			u()
-			$('.img').css('background-image', img[songno])
-			$('.section2').css('background-image', img[songno])
-			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
-			$(".name").html(name[songno]);
-		})
-		$('#c').click(function(){
-			songno = 2;
-			song.src = '3.mp3'
-			playsong()
-			u()
-			$('.img').css('background-image', img[songno])
-			$('.section2').css('background-image', img[songno])
-			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
-			$(".name").html(name[songno]);
-		})
-		$('#d').click(function(){
-			songno = 3;
-			song.src = '4.mp3'
-			playsong()
-			u()
-			$('.img').css('background-image', img[songno])
-			$('.section2').css('background-image', img[songno])
-			var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
-			$(".name").html(name[songno]);
-		})
-		function u(){
-			$(".menu2").css("left",'-100%');
-			$(".cover").css("right",'-100%');
-		}
-	</script>
+    <div class="map">
+    	<div class="c1"></div>
+    	<iframe width="600px" height="400px" src="https://www.google.com/maps/embed/v1/view?zoom=4&center=20.5937%2C78.9629&key=AIzaSyDqvC2u9SM-y0iB4nWw336bTg4oQziTRU0" ></iframe>
+    </div>
+    <div class="calc">
+    	<div class="c2"></div>
+    	<div id="calculator">
+    		<div class="top">
+    			<span class="clear">C</span>
+    			<div class="screen"></div>
+    		</div>
+
+    		<div class="keys">
+    			<span>7</span>
+    			<span>8</span>
+    			<span>9</span>
+    			<span class="operator">+</span>
+    			<span>4</span>
+    			<span>5</span>
+    			<span>6</span>
+    			<span class="operator">-</span>
+    			<span>1</span>
+    			<span>2</span>
+    			<span>3</span>
+    			<span class="operator">÷</span>
+    			<span>0</span>
+    			<span>.</span>
+    			<span class="eval">=</span>
+    			<span class="operator">x</span>
+    		</div>
+    	</div>
+    </div>
+
+
+    <div class="main">
+    	<div class="c5"></div>
+    	<div class="cover"></div>
+    	<div class="controls">
+    		<div class="lines">
+    			<div class="l"></div>
+    			<div class="l"></div>
+    			<div class="l"></div>
+    		</div>
+    		<div class="menu2">
+    			<div class="cross3">X</div>
+    			<ul>
+    				<li id="a">Heavy</li>
+    				<li id="b">Lets Hurt Tonight</li>
+    				<li id="c">Lost on You</li>
+    				<li id="d">No Vacancy</li>
+    			</ul>
+    		</div>
+    		<center>
+    			<h1><div class="name">HEAVY</div></h1>
+    			<div class="buttons">	
+    				<div class="back" onclick="back()"><img src="back.png" height="50px" width="50px"></div>
+    				<div class="pause" onclick="play()"><img src="play.png" height="50px" width="50px"></div>
+    				<div class="forward"  onclick="next()"><img src="next.png" height="50px" width="50px"></div>
+    			</div>
+    		</center>
+    	</div>
+    	<div class="img"></div>
+    </div>
+
+</div>
+
+
+<script type="text/javascript">
+
+	var songno = 0;
+	var songs = ['1.mp3','2.mp3','3.mp3','4.mp3']
+	var img = ['url(1.jpg)','url(2.jpg)','url(3.jpg)','url(4.jpg)']
+	var song = new Audio();
+	function a(){
+		$('.img').css('background-image',img[songno]);
+		$('.section2').css('background-image',img[songno]);
+		var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+		$(".name").html(name[songno]);
+		console.log(name[10])
+	}
+
+	$('.a4').click(function(){
+		song.src = songs[songno]
+		playsong()
+	})
 	
-	<script type="text/javascript">
+	function playsong(){
+		song.play()
+	}
+	function play(){
+		if (song.paused) 
+		{
+			song.play();
+			$('.pause img').attr('src','pause.png')
+			var d = song.currentTime
+			var c = song.duration
+			console.log(d , c)
+		}
+		else 
+		{
+			song.pause();
+			$('.pause img').attr('src','play.png')
+		}
+	}
+	function next(){
+		songno++
+		if (songno>3) {
+			songno = 0
+			song.src = '1.mp3'
+			song.play();
+			a()
+		} else {
+			song.src = songs[songno]
+			song.play();
+			console.log(songno)
+			a()
+			song.play();
+		}
+
+	}
+	function back(){
+		songno--
+		if (songno<0) {
+			songno = 3
+			song.src = '4.mp3'
+			song.play();
+			a()
+		} else {
+			song.src = songs[songno]
+			song.play();
+			console.log(songno)
+			a()
+			song.play();
+		}			
+	}
+	$('.lines').click(function(){
+		$(".menu2").css("left",'0');
+		$(".cover").css("right",'0');
+	})
+	$('.cross3').click(function(){
+		$(".menu2").css("left",'-100%');
+		$(".cover").css("right",'-100%');
+	})
+	$('#a').click(function(){
+		songno = 0;
+		song.src = '1.mp3'
+		playsong()
+		u()
+		$('.img').css('background-image', img[songno])
+		$('.section2').css('background-image', img[songno])
+		var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+		$(".name").html(name[songno]);
+	})
+	$('#b').click(function(){
+		songno = 1;
+		song.src = '2.mp3'
+		playsong()
+		u()
+		$('.img').css('background-image', img[songno])
+		$('.section2').css('background-image', img[songno])
+		var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+		$(".name").html(name[songno]);
+	})
+	$('#c').click(function(){
+		songno = 2;
+		song.src = '3.mp3'
+		playsong()
+		u()
+		$('.img').css('background-image', img[songno])
+		$('.section2').css('background-image', img[songno])
+		var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+		$(".name").html(name[songno]);
+	})
+	$('#d').click(function(){
+		songno = 3;
+		song.src = '4.mp3'
+		playsong()
+		u()
+		$('.img').css('background-image', img[songno])
+		$('.section2').css('background-image', img[songno])
+		var name = ['Heavy' , 'Lets Hurt Tonight' ,' Lost on You' , 'No Vacancy']
+		$(".name").html(name[songno]);
+	})
+	function u(){
+		$(".menu2").css("left",'-100%');
+		$(".cover").css("right",'-100%');
+	}
+</script>
+
+<script type="text/javascript">
 
 	//time
 	$(document).ready(startTime())
@@ -237,11 +259,15 @@
 		var today = new Date();
 		var h = today.getHours();
 		var m = today.getMinutes();
+		
 
 		m = checkTime(m);
 
-		document.getElementById('txt').innerHTML =
-		h + ":" + m ;
+		document.getElementById('hours').innerHTML =h;
+		document.getElementById('mins').innerHTML = m;
+		if (h<10 ) {
+		document.getElementById('hours').innerHTML ="0"+h;
+		}
 		var t = setTimeout(startTime, 500);
 	}
 	function checkTime(i) {
@@ -251,26 +277,39 @@
 
 //date
 $(document).ready(function(){
-	n =  new Date();
-	y = n.getFullYear();
-	m = n.getMonth() + 1;
-	d = n.getDate();
-	document.getElementById("date").innerHTML = d + "/" + m + "/" + y;
+	var a = new Date();
+	var months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+	var m =  months[a.getMonth()]
+
+	var d = a.getDate();
+
+	var y = a.getFullYear();
+
+	var days = ["Monday","Tuesday","Wednesday","Thursday","Friday"]
+
+	var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+	
+	var t = days[a.getDay()]
+
+	document.getElementById("date").innerHTML = t+ ","+ d +" "+ m + " " + y
+
 })
 
 //apps
 $(document).ready(function(){
 	$('.button').click(function(){
-		$('#date').css('visibility','hidden')
+		$('#example').css('visibility','hidden')
 		$('.time').css('visibility','hidden')
 		$('.temp').css('visibility','hidden')
 		$('.button').css('visibility','hidden')
+		$('#date').css('visibility','hidden')
 		$('.menu').css('left','0')
-		$('.menu').css('left','0')
+		
 		
 	})
 	function revert() {
 		$('#date').css('visibility','visible')
+		$('#example').css('visibility','visible')
 		$('.time').css('visibility','visible')
 		$('.temp').css('visibility','visible')
 		$('.button').css('visibility','visible')
@@ -326,6 +365,7 @@ $(document).ready(function(){
 	$('.browser').draggable()
 	$('.main').draggable()
 	$('.calendar').draggable()
+	$('.side').draggable()
 
 	$('.map').click(function(){
 		$('.calc').css('z-index','300')
